<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_margin="4dp"
    android:padding="4dp"
    android:orientation="vertical"
    tools:context=".AddStudentsActivity">

    <TextView
        android:id="@+id/txt_view_ApplicationText"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/attendance_application"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/edt_studentcode"
        android:hint="@string/enter_student_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/edt_year_of_study"
        android:hint="@string/enter_year_of_study"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/edt_student_course_unit"
        android:hint="@string/enter_course_unit"/>
    <RelativeLayout
        android:layout_marginTop="30dp"
        android:id="@+id/rel_btn_view_download_files"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/btn_take_attendance"
            android:text="@string/take_attendance"
            android:layout_width="180dp"
            android:textSize="22sp"
            android:layout_height="100dp"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

</LinearLayout>