<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:padding="4dp"
    android:orientation="vertical"
    tools:context=".welcomeform">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/txt_view_ApplicationText"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/attendance_application"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:text="scan"/>

        <Button
            android:id="@+id/btn_manage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/btn_manage"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <Button
            android:text="@string/btn_view_attendance"
            android:id="@+id/btn_view_attendance"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
           />
    </LinearLayout>

</LinearLayout>